Better page titiles

--- a/app/templates/dashboard/dashboard-incinerateur.html.twig
+++ b/app/templates/dashboard/dashboard-incinerateur.html.twig
@@ -1,4 +1,8 @@
 {% extends "dashboard/base_dashboard.html.twig" %}
+{% block title %}
+Aeris - Synthèse globale - {{ incinerateur.name }}
+{% endblock %}
+
 {% block dashboard %}
 <h3 class="title is-3">Synthèse globale</h3>
 {% endblock %}
