--- a/app/templates/owner/declaration-dioxines.html.twig
+++ b/app/templates/owner/declaration-dioxines.html.twig
@@ -1,4 +1,7 @@
 {% extends "common/base_inside.html.twig" %}
+{% block title %}
+Aeris - Déclaration de dioxines et furannes
+{% endblock %}
 
 {% block body %}
 <script type="text/javascript">
