--- a/app/templates/owner/declaration.html.twig
+++ b/app/templates/owner/declaration.html.twig
@@ -1,5 +1,9 @@
 {% extends "common/base_inside.html.twig" %}
 
+{% block title %}
+Aeris - Effectuer une déclaration
+{% endblock %}
+
 {% block body %}
   <section class="section">
     <div class="container">
