--- a/app/templates/user/compte-rendu-declaration-dioxine.html.twig
+++ b/app/templates/user/compte-rendu-declaration-dioxine.html.twig
@@ -1,4 +1,8 @@
 {% extends "common/base_inside.html.twig" %}
+{% block title %}
+Aeris - Compte rendu de déclaration de dioxines
+{% endblock %}
+
 
 {% block stylesheets %}
 <style type="text/css">
