--- a/app/templates/user/compte-rendu-declaration.html.twig
+++ b/app/templates/user/compte-rendu-declaration.html.twig
@@ -10,6 +10,10 @@
 
 {% import _self as s %}
 
+{% block title %}
+Aeris - Compte rendu de déclaration de rejets dans l'air
+{% endblock %}
+
 {% block stylesheets %}
 <style type="text/css">
 
