--- a/app/templates/user/historique.html.twig
+++ b/app/templates/user/historique.html.twig
@@ -1,4 +1,8 @@
 {% extends "common/base_inside.html.twig" %}
+{% block title %}
+Aeris - Historique des déclarations - {{ incinerateur.name }}
+{% endblock %}
+
 {% block body %}
   <section class="section">
     <div class="container">
