--- a/app/templates/inspecteur/liste-incinerateurs.html.twig
+++ b/app/templates/inspecteur/liste-incinerateurs.html.twig
@@ -1,4 +1,8 @@
 {% extends "common/base_inside.html.twig" %}
+{% block title %}
+Aeris - List des incinérateurs
+{% endblock %}
+
 {% block body %}
   <section class="section">
     <div class="container">
