--- a/app/templates/owner/declaration-mesures-continues.html.twig
+++ b/app/templates/owner/declaration-mesures-continues.html.twig
@@ -1,4 +1,7 @@
 {% extends "common/base_inside.html.twig" %}
+{% block title %}
+Aeris - Déclaration mensuelle de mesures continues
+{% endblock %}
 
 {% block body %}
   <section class="section">
