prepare raw graph data

--- a/app/templates/dashboard/dashboard-incinerateur.html.twig
+++ b/app/templates/dashboard/dashboard-incinerateur.html.twig
@@ -5,4 +5,6 @@ Aeris - Synthèse globale - {{ incinerateur.name }}
 
 {% block dashboard %}
 <h3 class="title is-3">Synthèse globale</h3>
+
+{{ dump(dashboardData) }}
 {% endblock %}
