--- a/app/templates/dashboard/dashboard-line.html.twig
+++ b/app/templates/dashboard/dashboard-line.html.twig
@@ -4,6 +4,16 @@
 </div>
 {% endmacro %}
 
+{% macro ligneTableau(lineReport, titre, colonne) %}
+<tr>
+  <td>{{ titre }}</td>
+  {% for component in lineReport.tableCompteurs.colonnes %}
+  <td class="{% if lineReport.tableCompteurs.measures[colonne][component] % 2 == 0%}compteur-invalide{%endif%}">{{ lineReport.tableCompteurs.measures[colonne][component] }}</td>
+  {% endfor %}
+  <td>N/A</td>
+</tr>
+{% endmacro %}
+
 {% import _self as s %}
 
 {% extends "dashboard/base_dashboard.html.twig" %}
@@ -13,7 +23,13 @@ Aeris - Synthèse ligne {{ ligneId }} - {{ incinerateur.name }}
 
 
 {% block dashboard %}
-
+<style type="text/css">
+.compteur-invalide{
+  background-color: #ff3860;
+  color: #fff;
+  font-weight:bold;
+}
+</style>
 <h3 class="title is-3">Synthèse ligne n°{{ ligneId }}</h3>
 <div>
   <table class="table">
@@ -54,34 +70,10 @@ Aeris - Synthèse ligne {{ ligneId }} - {{ incinerateur.name }}
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>Dépassement VLE article 10 (h)</td>
-        {% for component in lineReport.tableCompteurs.colonnes %}
-        <td>{{ lineReport.tableCompteurs.measures['compt_art10_mensuel'][component] }}</td>
-        {% endfor %}
-        <td>N/A</td>
-      </tr>
-      <tr>
-        <td>Nombre de dépassements de la concentration moyenne journalière (j)</td>
-        {% for component in lineReport.tableCompteurs.colonnes %}
-        <td>{{ lineReport.tableCompteurs.measures['nb_dep_c_moy_24h_mensuel'][component] }}</td>
-        {% endfor %}
-        <td>N/A</td>
-      </tr>
-      <tr>
-        <td>Nombre de dépassements du flux journalier (j)</td>
-        {% for component in lineReport.tableCompteurs.colonnes %}
-        <td>{{ lineReport.tableCompteurs.measures['nb_dep_f_24h_mensuel'][component] }}</td>
-        {% endfor %}
-        <td>N/A</td>
-      </tr>
-      <tr>
-        <td>Nombre de dépassements > 4h </td>
-        {% for component in lineReport.tableCompteurs.colonnes %}
-        <td>{{ lineReport.tableCompteurs.measures['nb_dep_4h_mensuel'][component] }}</td>
-        {% endfor %}
-        <td>N/A</td>
-      </tr>
+      {{ s.ligneTableau(lineReport, "Dépassement VLE article 10 (h)",'compt_art10_mensuel') }}
+      {{ s.ligneTableau(lineReport, "Nombre de dépassements de la concentration moyenne journalière (j)",'nb_dep_c_moy_24h_mensuel') }}
+      {{ s.ligneTableau(lineReport, "Nombre de dépassements du flux journalier (j)",'nb_dep_f_24h_mensuel') }}
+      {{ s.ligneTableau(lineReport, "Nombre de dépassements > 4h",'nb_dep_4h_mensuel') }}
     </tbody>
   </table>
 </div>
