--- a/app/templates/dashboard/dashboard-line.html.twig
+++ b/app/templates/dashboard/dashboard-line.html.twig
@@ -8,7 +8,7 @@
 <tr>
   <td>{{ titre }}</td>
   {% for component in lineReport.tableCompteurs.colonnes %}
-  <td class="{% if lineReport.tableCompteurs.measures[colonne][component] % 2 == 0%}compteur-invalide{%endif%}">{{ lineReport.tableCompteurs.measures[colonne][component] }}</td>
+  <td class="{% if lineReport.tableCompteurs.measures[colonne][component] > 0%}compteur-invalide{%endif%}">{{ lineReport.tableCompteurs.measures[colonne][component] }}</td>
   {% endfor %}
   <td>N/A</td>
 </tr>
