--- a/app/templates/dashboard/dashboard-incinerateur.html.twig
+++ b/app/templates/dashboard/dashboard-incinerateur.html.twig
@@ -16,6 +16,14 @@ Aeris - Synthèse globale - {{ incinerateur.name }}
   </div>
 </div>
 
+<p>Heures de fonctionnement</p>
+
+<div>
+  <div class="dioxine-canvas-container">
+    <canvas id="canvas_heures_fonctionnement"></canvas>
+  </div>
+</div>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/0.5.5/chartjs-plugin-annotation.js"></script>
 <script src="https://cdn.rawgit.com/chartjs/Chart.js/master/samples/utils.js"></script>
@@ -23,9 +31,11 @@ Aeris - Synthèse globale - {{ incinerateur.name }}
   
 <script>
 var reportData = {{ dashboardData.graphQtitesIncinerees|json_encode()|raw }}
+var heuresFonctionnementData = {{ dashboardData.graphHeuresFonctionnement|json_encode()|raw }}
 
 window.onload = function() {
     addQuantiteesIncinereesChart(reportData);
+    addHeuresFonctionnementChart(heuresFonctionnementData);
 };
 
 </script>
