--- a/app/templates/user/historique.html.twig
+++ b/app/templates/user/historique.html.twig
@@ -35,9 +35,9 @@ Votre déclaration de dioxines et furannes a bien été prise en compte. Vous po
           <tbody>
             {% for declaration in incinerateur.declarationsIncinerateur|sortbyfield('createdAt')|reverse %}
             <tr>
-              <th>
+              <td>
                 <a href="{{ path('route_cr_declaration', {declarationId: declaration.id}) }}">{{ declaration.declarationMonth|monthfr|raw }} </a>
-              </th>
+              </td>
               <td>
                 {{ declaration.createdAt|localizeddate('medium', 'none') }}
               </td>
@@ -73,16 +73,18 @@ Votre déclaration de dioxines et furannes a bien été prise en compte. Vous po
             {% for declaration in incinerateur.declarationsDioxine  |sortbyfield('createdAt')|reverse %}
             <tr>
               <td>
+                <a href="{{ path('route_cr_declaration_dioxine', {declarationId: declaration.id}) }}">
                 {% for diox in declaration.mesuresDioxine%}
                   {# This is definitely the worst array access ever writen. #}
                   {# We only want to display the first item, yet somehow declaration.mesuresDioxine[0] or declaration.mesuresDioxine|first are not enough #}
                   {% if loop.first %}
                     {{ diox.dateDebut|date('d/m/Y') }} - {{ diox.dateFin|date('d/m/Y') }} <br />
                   {% endif %}
-                {% endfor %}                  
+                {% endfor %}
+                </a>              
               </td>
               <td>
-                <a href="{{ path('route_cr_declaration_dioxine', {declarationId: declaration.id}) }}">{{ declaration.createdAt|localizeddate('medium', 'none') }}</a>
+                {{ declaration.createdAt|localizeddate('medium', 'none') }}
               </td>
               <td>
                 {{ declaration.comment }}
@@ -100,11 +102,6 @@ Votre déclaration de dioxines et furannes a bien été prise en compte. Vous po
       <br>
       <a href="{{ path('route_declaration_dioxines') }}" class="button is-primary is-large">Effectuer une déclaration de dioxines et furannes</a>
       {% endif %}
-
-      {#
-      <h2>compte rendu test</h2>
-      <a href="{{ path('route_cr_sample') }}">accéder</a>
-      #}
     </div>
   </section>
 {% endblock %}
