typo fixes & better data

--- a/app/templates/dashboard/dashboard-line.html.twig
+++ b/app/templates/dashboard/dashboard-line.html.twig
@@ -55,8 +55,8 @@ Aeris - Synthèse ligne {{ ligneId }} - {{ incinerateur.name }}
         #}
       <tr>
         <td><a href="#section-dioxines">Dioxines</a></td>
-        <td>{{ lineReport.tableDioxinesCompteurs60.dioxinesDernierMois }}</td>
-        <td>{{ lineReport.tableDioxinesCompteurs60.dioxinesAnnuel }}</td>
+        <td>{{ lineReport.tableDioxinesCompteurs60.dioxinesDernierMois }} ng/m<sup>3</sup></td>
+        <td>{{ lineReport.tableDioxinesCompteurs60.nbDepassementDioxinesAnnee }} dépassements</td>
       </tr>
     </tbody>
   </table>
@@ -67,7 +67,7 @@ Aeris - Synthèse ligne {{ ligneId }} - {{ incinerateur.name }}
         <th>Paramètres</th>
         <th><a href="#section-poussieres">Poussières</a></th>
         <th><a href="#section-co">CO</a></th>
-        <th><a href="#section-cot">COT</a></th>
+        <th><a href="#section-cot"><abbr title="Carbone organique total">COT</abbr></a></th>
         <th><a href="#section-hcl">HCl</a></th>
         <th><a href="#section-hf">HF</a></th>
         <th><a href="#section-so2">SO<sub>2</sub></a></th>
