--- a/app/templates/dashboard/dashboard-line.html.twig
+++ b/app/templates/dashboard/dashboard-line.html.twig
@@ -66,13 +66,13 @@ Aeris - Synthèse ligne {{ ligneId }} - {{ incinerateur.name }}
       <tr>
         <th>Paramètres</th>
         <th><a href="#section-poussieres">Poussières</a></th>
-        <th><a href="#section-co">CO</a></th>
+        <th><a href="#section-co"><abbr title="Monoxyde de carbone">CO</abbr></a></th>
         <th><a href="#section-cot"><abbr title="Carbone organique total">COT</abbr></a></th>
-        <th><a href="#section-hcl">HCl</a></th>
-        <th><a href="#section-hf">HF</a></th>
-        <th><a href="#section-so2">SO<sub>2</sub></a></th>
-        <th><a href="#section-nox">NOX</a></th>
-        <th><a href="#section-nh3">NH<sub>3</sub></a></th>
+        <th><a href="#section-hcl"><abbr title="Chlorure d'hydrogène">HCl</abbr></a></th>
+        <th><a href="#section-hf"><abbr title="Fluorure d'hydrogène">HF</abbr></a></th>
+        <th><a href="#section-so2"><abbr title="Dioxyde de soufre">SO<sub>2</sub></abbr></a></th>
+        <th><a href="#section-nox"><abbr title="Oxyde d'azote">NOX</abbr></a></th>
+        <th><a href="#section-nh3"><abbr title="Ammoniac">NH<sub>3</sub></abbr></a></th>
         <th>Total</th>
       </tr>
     </thead>
