--- a/app/templates/common/base.html.twig
+++ b/app/templates/common/base.html.twig
@@ -12,6 +12,7 @@
     <body>
       <div class="nav__container">
         <a class="nav__link" href="/">
+          <img class="nav__logo" src="{{ asset('build/static/logo/logo-fabnum.png') }}">
           <img class="nav__logo" src="{{ asset('build/static/logo/logo-aeris.png') }}" alt="Accueil d'Aeris">
         </a>
 
