--- a/app/templates/common/base.html.twig
+++ b/app/templates/common/base.html.twig
@@ -10,8 +10,8 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-      <div class="nav__container">
-        <a class="nav__link" href="/">
+      <div class="nav__container" style="padding:0">
+        <a class="nav__link" href="/"  style="height:72px" >
           <img class="nav__logo" src="{{ asset('build/static/logo/logo-fabnum.png') }}">
           <img class="nav__logo" src="{{ asset('build/static/logo/logo-aeris.png') }}" alt="Accueil d'Aeris">
         </a>
