added mail sending command

--- a/app/templates/mails/new-declaration/raw.txt.twig
+++ b/app/templates/mails/new-declaration/raw.txt.twig
@@ -1,6 +1,6 @@
 Bonjour,
 
-{{ declaration.incinerateur.name }} vient d'effectuer une déclaration de rejets dans l'air concernant la période {{ declaration.declarationMonth|date("Y/m") }}.
+{{ declaration.incinerateur.name }} vient d'effectuer une déclaration de rejets dans l'air concernant la période {{ declaration.declarationMonth|date("m/Y") }}.
 
 Vous pouvez la consulter sur https://aeris.beta.gouv.fr
 
