introduced declaration timeline

--- a/app/templates/owner/declaration-mesures-continues.html.twig
+++ b/app/templates/owner/declaration-mesures-continues.html.twig
@@ -5,7 +5,10 @@ Aeris - Déclaration mensuelle de mesures continues
 
 {% block body %}
   <section class="section">
+
     <div class="container declaration-mesures-continues">
+        {% include 'common/declaration-mesure-continues-timeline.html.twig' with {step: 1} %}
+        
         <h2 class="title is-2">Déclaration mensuelle de mesures continues</h2>
         {{ form_start(form, {'attr': {'class':'dropzone', 'id': "declaration-upload"}}) }}
 
