--- a/app/templates/common/declaration-mesure-continues-timeline.html.twig
+++ b/app/templates/common/declaration-mesure-continues-timeline.html.twig
@@ -1,11 +1,7 @@
-<div class="columns upload">
-  <div class="column notification is-success">
-    1. Déclaration
-  </div>
-  <div class="column {%if step >=2 %}notification is-success{% endif %}">
-    2. Relecture de la déclaration
-  </div>
-  <div class="column">
-    3. Envoi à l'inspecteur
-  </div>
+<div class="columns" style="text-align:center">
+  <div class="column"><div class="{%if step >=1 %}notification is-info{% endif %}">1. Déclaration</div></div>
+  <div class="column is-1"><div class="notification">&gt;</div></div>
+  <div class="column"><div class="notification {%if step >=2 %}is-info{% endif %}">2. Relecture de la déclaration</div></div>
+  <div class="column is-1"><div class="notification">&gt;</div></div>
+  <div class="column"><div class="notification {%if step >=3 %}is-info{% endif %}">3. Envoi</div></div>
 </div>
