dioxines declaration flow refactored

--- a/app/templates/dioxines/declaration.html.twig
+++ b/app/templates/dioxines/declaration.html.twig
@@ -9,6 +9,8 @@ Aeris - Déclaration de dioxines et furannes
 
   <section class="section">
     <div class="container">
+        {% include 'common/declaration-timeline.html.twig' with {step:1} %}
+
         <h2 class="title is-2">Déclaration de dioxines et furannes</h2>
         {{ form_start(form) }}
 
