fixed complete declaration flow

--- a/app/templates/dioxines/declaration.html.twig
+++ b/app/templates/dioxines/declaration.html.twig
@@ -70,7 +70,7 @@ Aeris - Déclaration de dioxines et furannes
         <h3 class="title is-3">Remarques</h3>
         {{ form_widget(form.comment) }}<br/>
 
-        <input type="submit" value="Déclarer !" class="button is-primary"/>
+        <input type="submit" value="Passer à l'étape 2: relecture" class="button is-primary"/>
         {{ form_end(form) }}
         
     </div>
